src/scss/_typography.scss
@font-face {
    font-family: "Archia Light";
    src: url('/../fonts/archia-light-webfont.woff2') format('woff2');
    font-display: swap;
}
@font-face {
    font-family: "Archia Medium";
    src: url('/../fonts/archia-medium-webfont.woff2') format('woff2');
    font-display: swap;
}
@font-face {
    font-family: "Migra Extrabold";
    src: url('/../fonts/Migra-Extrabold.woff2') format('woff2');
    font-display: swap;
}
@font-face {
    font-family: "Migra Extrabold Italic";
    src: url('/../fonts/MigraItalic-ExtraboldItalic.woff2') format('woff2');
    font-display: swap;
}
@font-face {
    font-family: "Migra Extralight";
    src: url('/../fonts/Migra-Extralight.woff2') format('woff2');
    font-display: swap;
}
@font-face {
    font-family: "Fraktion Mono";
    src: url('/../fonts/FraktionMono-Regular.otf') format('opentype');
    font-display: swap;
}

body {
    @include apply-utility('font', 'base');
    @include apply-utility('weight', 'regular');
    font-size: get-size('400');
    line-height: 1.4;

    @include media-query('lg') {
        font-size: get-size('500');
    }

    @supports (font-size: clamp(#{get-size('400')}, 1.33vw, #{get-size('500')})) {
        font-size: clamp(#{get-size('400')}, 1.33vw, #{get-size('500')});
    }
}

h1,
.h1,
h2,
.h2,
h3,
.h3,
h4,
.h4,
h5,
.h5,
h6,
.h6 {
    line-height: 1.36;
}

h1,
.h1,
h2,
.h2,
h3,
.h3,
h5,
.h5,
cite,
.cite,
blockquote + figcaption {
    @include apply-utility('font', 'title');
    @include apply-utility('weight', 'regular');
}

h4,
.h4,
h6,
.h6,
blockquote {
    @include apply-utility('font', 'title-l');
    @include apply-utility('weight', 'light');
    letter-spacing: .033em;
}

h1,
.h1 {
    font-size: 5.3vw;

    @supports (font-size: clamp(#{get-size('800')}, 5.3vw, #{get-size('1100')})) {
        font-size: clamp(#{get-size('800')}, 5.3vw, #{get-size('1100')});
    }

    &:not([class]) {
        margin-bottom: .512em;
    }
}

h2,
.h2 {
    font-size: 4.2vw;

    @supports (font-size: clamp(#{get-size('700')}, 4.2vw, #{get-size('1000')})) {
        font-size: clamp(#{get-size('700')}, 4.2vw, #{get-size('1000')});
    }
}

h3,
.h3 {
    font-size: 3.3vw;

    @supports (font-size: clamp(#{get-size('600')}, 3.3vw, #{get-size('900')})) {
        font-size: clamp(#{get-size('600')}, 3.3vw, #{get-size('900')});
    }
}

h4,
.h4,
blockquote {
    font-size: 2.7vw;

    @supports (font-size: clamp(#{get-size('600')}, 2.7vw, #{get-size('800')})) {
        font-size: clamp(#{get-size('600')}, 2.7vw, #{get-size('800')});
    }
}

h5,
.h5,
h6,
.h6,
blockquote + figcaption,
cite,
.cite {
    font-size: get-size('400');
    line-height: 1.375;
    margin-top: 0;
    margin-bottom: get-size('300');
}

h5,
.h5,
blockquote + figcaption,
cite,
.cite {
    text-transform: uppercase;
    letter-spacing: 1px;
}

.xl,
.xxl {
    @include apply-utility('font', 'title-i');
    @include apply-utility('weight', 'regular');
    line-height: 1;
    word-wrap: break-word;
    hyphens: auto;

    + * {
        margin-top: 3em;

        @supports (margin-top: clamp(2em, 6.7vw, 3em)) {
            margin-top: clamp(2em, 6.7vw, 3em);
        }
    }

    + .lede {
        + section {
            margin-top: 5em;

            @supports (margin-top: clamp(4em, 6.7vw, 5em)) {
                margin-top: clamp(4em, 6.7vw, 5em);
            }
        }
    }
}

.xl {
    font-size: 10.3vw;

    @supports (font-size: clamp(#{get-size('1000')}, 10.3vw, #{get-size('1400')})) {
        font-size: clamp(#{get-size('1000')}, 10.3vw, #{get-size('1400')});
    }
}

.xxl {
    font-size: 16.2vw;

    @supports (font-size: clamp(#{get-size('1100')}, 16.2vw, #{get-size('1600')})) {
        font-size: clamp(#{get-size('1100')}, 16.2vw, #{get-size('1600')});
    }
}

.h-sep {
    @include apply-utility('box', 'flex');
    position: relative;

    > :nth-child(2) {
        flex: 0 0 auto;
        margin-left: get-size('300');
        margin-right: get-size('300');
        max-width: 80%;

        @include media-query('sm') {
            margin-left: get-size('400');
            margin-right: get-size('400');
        }

        @include media-query('md') {
            margin-left: get-size('700');
            margin-right: get-size('700');
        }
    }

    > span:not(:nth-child(2)) {
        flex: 1 1 auto;
        display: block;
        height: .125rem;
        width: 100%;
        transform: translateY(-150%);
        margin-top: auto;
        margin-bottom: auto;

        &:not([class^="bg-"]) {
            background-color: var(--color-primary);
        }
    }
}

a {
    color: var(--color-primary);
    text-decoration-thickness: .1em;
    text-underline-offset: .15em;

    &:not([class]) {
        position: relative;
        display: inline-block;
        background: linear-gradient(90deg,var(--color-primary) 0,var(--color-primary) 100%);
        background-repeat: no-repeat;
        background-position: 0 -1.5em;
        vertical-align: bottom;
        overflow: hidden;
        transition: .3s ease-in-out background-position, .3s ease-in-out color;
        transition-delay: .1s;

        &:hover,
        &:focus {
            color: var(--color-base);
            background-position: 0 0;
        }
    }

    &.back-to-top {
        text-decoration: none;

        &:hover,
        &:focus {
            text-decoration: underline;
            text-decoration-thickness: .1em;
            text-underline-offset: .15em;
        }
    }
}

strong,
.lede {
    @include apply-utility('font', 'strong');
}

.lede {
    font-size: get-size('700');

    @supports (font-size: clamp(#{get-size('500')}, 2.2vw, #{get-size('700')})) {
        font-size: clamp(#{get-size('500')}, 2.2vw, #{get-size('700')});
    }
}

em {
    font-style: normal;
    display: inline-block;
    transform: skew(-12.5deg);
}

mark {
    color: var(--color-base);
    background-color: var(--color-primary);
}

blockquote,
blockquote + figcaption,
cite,
.cite {
    padding-left: min(calc(#{get-size('400')} + 5vw), #{get-size('1100')});

    @include media-query('md') {
        padding-right: min(calc(#{get-size('300')} + 3vw), #{get-size('800')});
    }
}

blockquote {
    font-style: normal;

    > p {
        line-height: 1.2;

        &:first-of-type {
            position: relative;

            &:before,
            &:after {
                position: relative;
            }

            &:before {
                content: "“";
            }

            &:after {
                content: "”";
            }
        }
    }

    + cite,
    + figcaption,
    + .cite {
        position: relative;
        font-style: normal;
        color: var(--color-primary);
        margin-top: 1em;

        &:before {
            content: "—";
            margin-right: .5em;
        }
    }
}

p + .blockquote {
    margin-top: 3.5em;
}

.blockquote + p {
    margin-top: 3.5em;
}

picture + figcaption,
img + figcaption {
    @include apply-utility('font', 'title-l');
    margin-top: 1em;
}

ul,
ol {
    li {
        &::marker {
            color: var(--color-primary);
        }
    }
}

ul {
    ul {
        list-style: square;
    }
}

ol {
    ol {
        list-style: lower-roman;
    }
}

pre,
code,
kbd {
    @include apply-utility('font', 'mono');
    @include apply-utility('weight', 'regular');
    line-height: 1.375 !important;
    display: inline-block;
    -webkit-text-size-adjust: 100%;
}

pre,
code {
    color: darken($light-primary, 5%);
    background: rgba($light-primary, .15);
    border-radius: 3px;
    padding: 0 .25rem .25rem;
}

pre {
    display: block;
    overflow: scroll;
    border-radius: 0;

    code {
        background: none;
    }
}

code {
    border-radius: 3px;
}

kbd {
    font-size: get-size('400');
    padding: 0 .75rem .15rem;
    border: 2px solid;
    border-radius: 6px;

    font-size: get-size('500');
    line-height: 1.4;

    @supports (font-size: clamp(#{get-size('300')}, 1.25vw, #{get-size('400')})) {
        font-size: clamp(#{get-size('300')}, 1.25vw, #{get-size('400')});
    }
}

::selection {
    color: var(--color-base);
    background-color: rgba(darken($light-primary, 5%), .9);
}

@include dark-theme() {
    ::selection {
        background-color: rgba(lighten($dark-primary, 5%), .9);
    }

    pre,
    code {
        color: $dark-primary;
        background: rgba($dark-primary, .15);
    }

    pre {
        code {
            background: none;
        }
    }
}

